--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "WifiManager",
+  "name": "WiFiManager",
   "version": "1.0.0",
   "description": "WiFi Manager for ESP32 using MicroPython",
   "files": [
