--- a/package.json
+++ b/package.json
@@ -3,6 +3,6 @@
   "version": "1.0.0",
   "description": "WiFi Manager for ESP32 using MicroPython",
   "files": [
-    "wifi_manager"
+    "WiFiManager/wifi_manager"
   ]
 }
