Update publish workflow, remove unused files, and refine package configuration

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,5 +18,5 @@ classifiers = [
   "Operating System :: OS Independent"
 ]
 
-[tool.setuptools]
-packages = ["wifiManager"]
+[tool.setuptools.packages.find]
+where = ["."]
